# elm

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  doxygenConf.txt  index.html  params.json
bindings/elm/: CMakeLists.txt
bindings/elm/python/: CMakeLists.txt  arginfo.h  conversions.cpp  conversions.h  conversions_cv.cpp  conversions_cv.h  elmpy.cpp  numpyallocator.cpp  numpyallocator.h  signalpy.cpp  signalpy.h  stl_inl.h
modules/: CMakeLists.txt  competition.cpp  competition.h  encoder.cpp  encoder.h
modules/core/: CMakeLists.txt  area.cpp  area.h  base_Layer.cpp  base_Layer.h  core.cpp  core.h  defs.h  distributionsampler.cpp  distributionsampler.h  dsp.cpp  dsp.h  entropy.cpp  entropy.h  exception.cpp  exception.h  featuredata.cpp  featuredata.h  featuredatavisitors.cpp  featuredatavisitors.h  hist.cpp  hist.h  indices.cpp  indices.h  interval.cpp  interval.h  layerconfig.cpp  layerconfig.h  mat_utils.cpp  mat_utils.h  node.cpp  node.h  pcl_utils.cpp  pcl_utils.h  percentile.cpp  ptree_utils.cpp  ptree_utils.h  registor.cpp  registor.h  sampler.cpp  (+14 more)
modules/core/boost/: ptree_utils.cpp
modules/core/cv/: mat_type_utils.cpp  mat_utils.cpp  mat_utils.h  mat_utils_inl.h  mat_vector_utils.cpp  mat_vector_utils.h  mat_vector_utils_inl.cpp  mat_vector_utils_inl.h  neighborhood.cpp  neighborhood.h  type_utils.cpp  type_utils.h  typedefs_fwd.h
modules/core/pcl/: cloud.cpp  cloud.h  cloud_.cpp  cloud_.h  cloud_impl_.cpp  cloud_impl_.h  typedefs_fwd.h  vertices.cpp  vertices.h
modules/core/stl/: stl.cpp  stl.h  typedefs_fwd.h
modules/core/test/: Exception_unittests.cpp  area_unittests.cpp  core_unittests.cpp  distributionsampler_unittests.cpp  entropy_unittests.cpp  exception_unittests.cpp  featuredata_unittests.cpp  featuredatavisitors_unittests.cpp  hist_unittests.cpp  interval_unittests.cpp  layer_unittests.cpp  layerconfig_unittests.cpp  mat_utils_unittests.cpp  pcl_utils_unittests.cpp  percentile_unittests.cpp  ptree_utils_unittests.cpp  registor_unittests.cpp  sampler_unittests.cpp  signal_t_unittests.cpp  signal_unittests.cpp  stl_unittests.cpp  visitors_unittests.cpp  zerocrossings_unittests.cpp
modules/core/visitors/: visitor_.cpp  visitorcloud.cpp  visitorcloud.h  visitorcloud_.cpp  visitorcloud_.h  visitormat_.cpp  visitormat_.h  visitorpod_.cpp  visitorpod_.h  visitors.cpp  visitors.h  visitorvertices.cpp  visitorvertices.h
modules/elm/: CMakeLists.txt
modules/elm/core/: CMakeLists.txt  area.cpp  area.h  base_Layer.cpp  base_Layer.h  core.cpp  core.h  debug_utils.cpp  debug_utils.h  defs.cpp  defs.h  entropy.cpp  entropy.h  exception.cpp  exception.h  featuredata.cpp  featuredata.h  hist.cpp  hist.h  inputname.cpp  inputname.h  interval.cpp  interval.h  layerconfig.cpp  layerconfig.h  layerinputnames.cpp  layerinputnames.h  layerionames.cpp  layerionames.h  layeroutputnames.cpp  layeroutputnames.h  percentile.cpp  percentile.h  registor.cpp  registor.h  sampler.cpp  sampler.h  signal.cpp  signal.h  signal_.cpp  (+8 more)
modules/elm/encoding/: CMakeLists.txt  base_filterbank.cpp  base_filterbank.h  base_populationcode.cpp  base_populationcode.h  encoding.cpp  encoding.h  gabors.cpp  gabors.h  ganglion.cpp  ganglion.h  intensitycontrast.cpp  intensitycontrast.h  orientation.cpp  orientation.h  populationcode.cpp  populationcode.h
modules/elm/eval/: CMakeLists.txt  eval.cpp  eval.h  reversecorr.cpp  reversecorr.h
modules/elm/io/: CMakeLists.txt  base_reader.cpp  base_reader.h  base_readermnistfile.cpp  base_readermnistfile.h  binary.cpp  binary.h  file_serialization.cpp  file_serialization.h  io.cpp  io.h  matio_utils.cpp  matio_utils.h  matlabmatfilereader.cpp  matlabmatfilereader.h  readmnist.cpp  readmnist.h  readmnistimages.cpp  readmnistimages.h  readmnistlabels.cpp  readmnistlabels.h  readnyudepthv2labeled.cpp  readnyudepthv2labeled.h  synth.cpp  synth.h
modules/elm/layers/: CMakeLists.txt  attentionwindow.cpp  attentionwindow.h  concatentatecloudxyzandnormal.cpp  concatentatecloudxyzandnormal.h  diffofgaussians.cpp  diffofgaussians.h  gradassignment.cpp  gradassignment.h  graphcompatibility.cpp  graphcompatibility.h  icp.cpp  icp.h  imagegradient.cpp  layer_y.cpp  (+32 more)
modules/encoding/: CMakeLists.txt  base_distributionsampler.cpp  base_distributionsampler.h  base_filterbank.cpp  base_filterbank.h  distributionsampler.cpp  distributionsampler.h  distributionsampler1d.cpp  distributionsampler1d.h  encoder.cpp  encoder.h  encoding.cpp  encoding.h  filterbank.cpp  filterbank.h  ganglion.cpp  ganglion.h  intensitycontrast.cpp  intensitycontrast.h  orientation.cpp  orientation.cpp.autosave  orientation.h  populationcode.cpp  populationcode.h
modules/eval/: eval.cpp  reversecorr.cpp
modules/io/: CMakeLists.txt  binary.cpp  io.cpp  io.h  readmnist.cpp  readmnist.h  synth.cpp  synth.h
modules/layers/: CMakeLists.txt  attentionwindow.cpp  attentionwindow.h  icp.cpp  icp.h  layer_y.cpp  layer_y.h  layer_z.cpp  layer_z.h  layerfactory.cpp  layerfactory.h  layernotsupported.cpp  layernotsupported.h  layers.cpp  layers.h  saliencyitti.cpp  saliencyitti.h  triangulation.cpp  triangulation.h  weightedsum.cpp  weightedsum.h
modules/neuron/: CMakeLists.txt  base_learner.cpp  base_learner.h  competition.cpp  competition.h  neuron.cpp  neuron.h  spikinghistory.cpp  spikinghistory.h  wtapoisson.cpp  wtapoisson.h  zneuron.cpp  zneuron.h
modules/sem/: CMakeLists.txt
modules/ts/: CMakeLists.txt  container.cpp  container.h  fakeevidence.cpp  interval.cpp  interval.h  layer_assertions.cpp  layer_assertions.h  mat_assertions.cpp  mat_assertions.h  signal_tp_.h  ts.cpp  ts.h
samples/: CMakeLists.txt
samples/SEM_NIPS_2010/: sim_sem_nips_2010.cpp  simulationsem.cpp  simulationsem.h
samples/dummy_sample/: sample.cpp
samples/example/: example.cpp
samples/example_SEM_NIPS_2010/: example_sem_nips_2010.cpp
samples/example_hierarchical_SEM/: example_hierarchical_sem.cpp
samples/hierarchical_SEM/: sim_hierarchical_sem.cpp  simulationhsem.cpp  simulationhsem.h
samples/learn_depth_segmentation/: learn_depth_segmentation.cpp
(+2642 files in other folders)
